src/test/deca/context/invalid/homemade/tests/test371_appel_method_sur_nonclass_float.deca
// test invalide de la règle 3.71


class A{

    int x = 8;
    void calcul(int valeur){
        this.x = this.x + 2;
    }
    
    
}


{
    float v;
    A a = new A();
    v.calcul(3);
}
